compiler/test/parse-err/return-in-loop.gr
// RUN: graphalg-translate --import-graphalg --verify-diagnostics %s

func ReturnInLoop() -> int {
    for i in int(1):int(10) {
        // expected-error@below{{return statement inside a loop is not allowed}}
        return int(5);
    }
    return int(0);
}
